# py-ospos

./: .gitignore  AGENTS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  skills-lock.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.opencode/: napkin.md
.opencode/skills/napkin/: SKILL.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  3bca1a727b38_remove_is_admin_from_employees.py  b171b4659a5d_seed_permissions_and_roles.py
app/: main.py
app/api/v1/: auth.py  customer.py  employee.py  expense.py  invoice.py  item.py  quotation.py  role.py  sale.py
app/core/: auth.py  config.py  exceptions.py  security.py
app/db/: seed.py  session.py
app/models/: base.py  customer.py  employee.py  expense.py  invoice.py  item.py  quotation.py  role.py  sale.py
app/schemas/: customer.py  employee.py  expense.py  invoice.py  item.py  quotation.py  role.py  sale.py
docker/: Dockerfile
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: bottom-nav.tsx  can.tsx  entity-page.tsx  providers.tsx  sidebar.tsx
frontend/src/lib/: api.ts  auth-context.tsx
frontend/src/test/: setup.ts
openspec/changes/frontend-nextjs/: design.md  proposal.md  tasks.md
openspec/changes/implement-rbac/: proposal.md  tasks.md
openspec/changes/rewrite-pos-in-python/: design.md  tasks.md
openspec/specs/authentication/: spec.md
openspec/specs/barcode/: spec.md
openspec/specs/ci/: spec.md
openspec/specs/customer/: spec.md
openspec/specs/employee/: spec.md
openspec/specs/item/: spec.md
tests/: conftest.py  test_auth.py  test_customer.py  test_employee.py  test_expense.py  test_invoice.py  test_item.py  test_main.py  test_models.py  test_quotation.py  test_role.py  test_sale.py
(+70 files in other folders)
